--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
         <noscript>You need to enable JavaScript to run this app.</noscript>
         
         <div id="root"></div>
+
+	
+</div>
         
         <!--
       This HTML file is a template.
